--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "sass": "^1.85.1"
   },
   "devDependencies": {
